--- a/assets/index.less
+++ b/assets/index.less
@@ -1,5 +1,7 @@
+@itemHeight: 34px;
+
 .rmc-picker,.rmc-multi-picker {
-  height: 238px; /*34*7*/
+  height: @itemHeight * 7; /*34*7*/
 }
 
 .rmc-multi-picker {
@@ -8,9 +10,9 @@
 }
 
 .rmc-picker-item {
-  font-size: 16px;
-  height: 34px;
-  line-height: 34px;
+  font-size: 18px;
+  height: @itemHeight;
+  line-height: @itemHeight;
   padding: 0 10px;
   white-space: nowrap;
   position: relative;
@@ -40,8 +42,9 @@
   z-index: 3;
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6)), linear-gradient(to top, rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.6));
   background-position: top, bottom;
-  background-size: 100% 204px;
+  background-size: 100% @itemHeight * 6;
   background-repeat: no-repeat;
+  pointer-events: none;
 }
 
 .rmc-picker-content {
@@ -55,10 +58,10 @@
 .rmc-picker-indicator {
   box-sizing: border-box;
   width: 100%;
-  height: 34px;
+  height: @itemHeight;
   position: absolute;
   left: 0;
-  top: 102px;
+  top: @itemHeight * 3;
   z-index: 3;
   border-top: 1PX solid #ddd;
   border-bottom: 1PX solid #ddd;
